# neuraltrade

./: .env.example  .gitignore  FEATURE_ANALYSIS.md  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.agent/: SESSION_STATE.md
.agent/rules/: payment-security.md
.agent/skills/cloud-nexus/: SKILL.md
.agent/skills/flow-master/: SKILL.md
.agent/skills/nextjs-trading-architect/: SKILL.md
.agent/skills/nexus-architect/: SKILL.md
.agent/skills/python-ml-architect/: SKILL.md
.agent/skills/qa-sentinel/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
.agent/state/: session-2026-01-31-stripe.md
.agent/workflows/: arquitecto-sistemas.md  auditor-seguridad.md  continuar-neuraltrade.md  devops-specialist.md  documentador-tecnico.md  ingeniero-software.md  nexus-orquestador.md  qa-testing.md
apps/dashboard/: .env.example  next.config.js  package.json
infrastructure/scripts/: mongo-init.js
services/api-gateway/: Dockerfile  package.json  tsconfig.json
services/backtesting/: package.json
services/ingestion/: Dockerfile  package.json
services/ingestion/src/: index.ts
services/ml-engine/: Dockerfile  pyproject.toml  requirements.txt
services/ml-engine/app/: __init__.py  config.py  main.py
services/ml-engine/app/models/: signal_predictor.py
services/ml-engine/app/queue/: __init__.py  consumer.py
services/ml-engine/app/schemas/: signal.py
services/ml-engine/app/services/: risk_assessor.py
services/ml-engine/models/: .gitkeep
services/notification/: Dockerfile  package.json
services/trading/: Dockerfile  package.json
(+109 files in other folders)
